completed current version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         margin:0px;
         padding:0px;
         text-align:center;
+        background: #000000;
+        color: #ffffff;
       }
 
       canvas {
@@ -20,5 +22,10 @@
     <canvas id="c"></canvas>
     <textarea id="status"></textarea>
     <script src="chip8.js"></script>
+    <p>
+    Controls: Q W E
+    <br />
+    Q move left, W shoot/start, E move right
+    </p>
   </body>
 </html>
